--- a/css/style.css
+++ b/css/style.css
@@ -98,16 +98,20 @@ ul.list > li.list-item {
 }
 
 .item-body {
-  display: flex;
+  /* display: flex; */
   padding: 8px;
   background-color: #F5F6F7;
 }
 
-.item-image {
-  display: block;
+.image-cover {
+  display: flex;
+  justify-content: center;
+  background: #fff;
   border: solid 1px rgba(210, 215, 217, 0.75);
-  /* padding: 8px; */
-  margin-right: 16px;
+}
+
+.item-p {
+  margin: 8px 0 0 0;
 }
 
 .footer {
