--- a/css/style.css
+++ b/css/style.css
@@ -98,9 +98,10 @@ ul.list > li.list-item {
 }
 
 .item-body {
-  /* display: flex; */
-  padding: 8px;
+  height: 0;
+  overflow: hidden;
   background-color: #F5F6F7;
+  transition: 0.3s ease-in-out;
 }
 
 .image-cover {
@@ -108,10 +109,13 @@ ul.list > li.list-item {
   justify-content: center;
   background: #fff;
   border: solid 1px rgba(210, 215, 217, 0.75);
+  margin: 8px;
+  padding: 8px;
 }
 
 .item-p {
-  margin: 8px 0 0 0;
+  margin: 8px;
+  font-size: .9rem;
 }
 
 .footer {
