Add show hide items

--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,10 @@ ul.list > li.list-item {
   transition: 0.3s ease-in-out;
 }
 
+.show-item {
+  /* height: initial */
+}
+
 .image-cover {
   display: flex;
   justify-content: center;
