--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,6 @@ ul.list > li.list-item {
   border-left: solid 1px rgba(210, 215, 217, 0.75);
   border-top: solid 1px rgba(210, 215, 217, 0.75);
   border-right: solid 1px rgba(210, 215, 217, 0.75);
-  /* border: 1px solid red; */
 }
 
 .item-head {
@@ -87,6 +86,7 @@ ul.list > li.list-item {
   border-bottom: solid 1px rgba(210, 215, 217, 0.75);
   padding: 16px;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .item-head-count {
