--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ ul.nav > li.nav-item > a {
   transition: 0.3s ease-in-out;
 }
 
-ul.nav > li.nav-item > a:hover {
+ul.nav > li.nav-item > a:hover, ul.nav > li.nav-item > a.active{
   background: #F5F6F7
 }
 
