--- a/css/style.css
+++ b/css/style.css
@@ -38,13 +38,10 @@ h1, h2, h3, h4, h5, h6 {
    padding: 16px;
 }
 
-.section {
-  /* padding: 16px; */
-}
-
 ul.nav {
 display: flex;
-justify-content: space-between;  
+justify-content: space-between;
+border-bottom: solid 1px rgba(210, 215, 217, 0.75);  
 }
 
 ul.nav > li.nav-item {
@@ -76,7 +73,6 @@ ul.nav, ul.list {
 ul.list > li.list-item {
   display: block;
   border-left: solid 1px rgba(210, 215, 217, 0.75);
-  border-top: solid 1px rgba(210, 215, 217, 0.75);
   border-right: solid 1px rgba(210, 215, 217, 0.75);
 }
 
@@ -114,13 +110,10 @@ ul.list > li.list-item {
   transition: 0.3s ease-in-out;
 }
 
-.show-item {
-  /* height: initial */
-}
-
 .image-cover {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   background: #fff;
   border: solid 1px rgba(210, 215, 217, 0.75);
   margin: 8px;
