--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .header {
-   border-bottom: solid 2px rgba(210, 215, 217, 0.75);
+   border-bottom: solid 1px rgba(210, 215, 217, 0.75);
    padding: 16px;
+}
+
+.section {
+  padding: 0 8px;
 }
 
 ul.nav {
@@ -72,6 +76,7 @@ ul.nav, ul.list {
 
 ul.list > li.list-item {
   display: block;
+  margin: 0 -8px 0 -8px;
   border-left: solid 1px rgba(210, 215, 217, 0.75);
   border-right: solid 1px rgba(210, 215, 217, 0.75);
 }
@@ -112,7 +117,7 @@ ul.list > li.list-item {
 }
 
 .height-auto {
-  max-height: 316px;
+  max-height: 324px;
 }
 
 .image-cover {
@@ -126,12 +131,12 @@ ul.list > li.list-item {
 }
 
 .item-p {
-  margin: 8px;
+  margin: 8px 8px 8px 16px;
   font-size: .9rem;
 }
 
-.margin-top-16 {
-  margin-top: 16px;
+.margin-h4 {
+  margin: 16px 0 0 8px;
 }
 
 .footer {
