--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ ul.list > li.list-item {
 
 .image-cover {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   background: #fff;
   border: solid 1px rgba(210, 215, 217, 0.75);
@@ -137,6 +137,21 @@ ul.list > li.list-item {
 
 .margin-h4 {
   margin: 16px 0 0 8px;
+}
+
+.block-shem {
+  display: inline-block;
+  width: 30%;
+  height: 90px;
+  text-align: center;
+  text-decoration: none;
+  padding-top: 40px;
+  background-color: #F5F6F7;
+  transition: 0.3s ease-in-out;
+}
+
+.block-shem:hover {
+  background-color:rgba(210, 215, 217, 0.75);
 }
 
 .footer {
