--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ h1, h2, h3, h4, h5, h6 {
    padding: 16px;
 }
 
-.section {
+section {
   padding: 0 8px;
 }
 
@@ -125,7 +125,7 @@ ul.list > li.list-item {
   justify-content: space-evenly;
   flex-wrap: wrap;
   background: #fff;
-  border: solid 1px rgba(210, 215, 217, 0.75);
+  /* border: solid 1px rgba(210, 215, 217, 0.75); */
   margin: 8px;
   padding: 8px;
 }
@@ -139,20 +139,14 @@ ul.list > li.list-item {
   margin: 16px 0 0 8px;
 }
 
-.block-shem {
-  display: inline-block;
-  width: 30%;
-  height: 70px;
-  text-align: center;
-  text-decoration: none;
-  padding: 40px 16px;
-  background-color: #F5F6F7;
-  transition: 0.3s ease-in-out;
+.mt-8 {
+  margin-top: 8px;
 }
 
-.block-shem:hover {
-  background-color:rgba(210, 215, 217, 0.75);
+.mt-16 {
+  margin-top: 16px;
 }
+
 
 .footer {
   border-top: solid 1px rgba(210, 215, 217, 0.75);
