Update block formul

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,400italic,600italic|Roboto+Slab:400,700");
-
 * {
   margin: 0;
   padding: 0;
   border: 0;
-  vertical-align: baseline;
+  /* vertical-align: baseline; */
 }
 
 body {
@@ -14,32 +13,73 @@ body {
 }
 
 hr {
-  border-top: 1px solid  rgba(210, 215, 217, 0.75);
+  border-top: 1px solid rgba(210, 215, 217, 0.75);
 }
 
 h1, h2, h3, h4, h5, h6 {
   color: #3d4449;
-  font-family: "Roboto Slab", serif; 
+  font-family: "Roboto Slab", serif;
+}
+
+table {
+  border-collapse: collapse;
+  font-size: .9em;
+  line-height: 1.3;
+  width: 100%;
+  margin: 16px 0 16px 0;
+}
+
+@media screen and (max-width: 400px) {
+  table {
+    font-size: .8em;
+  }
+}
+
+th {
+  padding: 8px;
+  color: #3d4449;
+  background-color: #FDC63A;
+}
+
+td {
+  text-align: center;
+  vertical-align: top;
+  padding: 8px;
+  border-bottom: 1px solid rgba(253, 198, 58, 0.5);
+}
+
+.td-head {
+  text-align: left;
+  color: #3d4449;
+  background-color: rgba(253, 198, 58, 0.5);
+}
+
+.td-error {
+  color: #fff;
+  background-color: rgba(193, 33, 6, 0.75);
 }
 
 .align-left {
-  text-align: left; }
+  text-align: left;
+}
 
 .align-center {
-  text-align: center; }
+  text-align: center;
+}
 
 .align-right {
-  text-align: right; }
+  text-align: right;
+}
 
 .container {
- max-width: 640px;
+  max-width: 640px;
   margin: 0 auto;
   /* border: 1px solid #c1c1c1; */
 }
 
 .header {
-   border-bottom: solid 1px rgba(210, 215, 217, 0.75);
-   padding: 16px;
+  border-bottom: solid 1px rgba(210, 215, 217, 0.75);
+  padding: 16px;
 }
 
 section {
@@ -47,19 +87,19 @@ section {
 }
 
 ul.nav {
-display: flex;
-justify-content: space-between;
-border-bottom: solid 1px rgba(210, 215, 217, 0.75);  
+  display: flex;
+  justify-content: space-between;
+  border-bottom: solid 1px rgba(210, 215, 217, 0.75);
 }
 
-ul.nav > li.nav-item {
+ul.nav>li.nav-item {
   display: block;
   width: 33%;
   text-align: center;
   /* border: 1px solid red; */
 }
 
-ul.nav > li.nav-item > a {
+ul.nav>li.nav-item>a {
   display: block;
   width: 100%;
   padding: 16px 0;
@@ -70,7 +110,7 @@ ul.nav > li.nav-item > a {
   transition: 0.3s ease-in-out;
 }
 
-ul.nav > li.nav-item > a:hover, ul.nav > li.nav-item > a.active{
+ul.nav>li.nav-item>a:hover, ul.nav>li.nav-item>a.active {
   background: #F5F6F7
 }
 
@@ -78,7 +118,7 @@ ul.nav, ul.list {
   list-style: none;
 }
 
-ul.list > li.list-item {
+ul.list>li.list-item {
   display: block;
   margin: 0 -8px 0 -8px;
   border-left: solid 1px rgba(210, 215, 217, 0.75);
@@ -152,6 +192,7 @@ ul.list > li.list-item {
 }
 
 /* Card */
+
 .cards {
   display: flex;
   justify-content: space-evenly;
@@ -166,19 +207,18 @@ ul.list > li.list-item {
   text-align: center;
   line-height: 1.3;
   text-decoration: none;
-  box-shadow: 0 .125rem .25rem rgba(0,0,0,.075)!important;
+  box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075)!important;
   border-radius: 4px;
   transition: 0.3s ease-in-out;
 }
 
 .card:hover {
-  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15)!important;
 }
 
 .card img {
-  height: 128px;
+  max-height: 128px;
 }
-
 
 .footer {
   border-top: solid 1px rgba(210, 215, 217, 0.75);
