--- a/css/style.css
+++ b/css/style.css
@@ -137,20 +137,33 @@ ul.nav, ul.list {
   list-style: none;
 }
 
+/* Items Shit */
+
+ul.list {
+  margin: 16px 0 16px 0;
+}
+
 ul.list>li.list-item {
   display: block;
   margin: 0 -8px 0 -8px;
-  border-left: solid 1px rgba(210, 215, 217, 0.75);
-  border-right: solid 1px rgba(210, 215, 217, 0.75);
+  /* border-left: solid 1px rgba(210, 215, 217, 0.75);
+  border-right: solid 1px rgba(210, 215, 217, 0.75); */
+  border-radius: 8px;
+}
+
+ul.list>li.list-item:first-of-type {
+  border-top: solid 1px rgba(210, 215, 217, 0.75);
 }
 
 .item-head {
   display: flex;
   justify-content: space-between;
-  border-bottom: solid 1px rgba(210, 215, 217, 0.75);
+  margin-top: -1px;
   padding: 16px;
   font-weight: bold;
   cursor: pointer;
+  border-radius: 8px;
+  border: solid 1px rgba(210, 215, 217, 0.75);
 }
 
 .item-head-count {
@@ -174,6 +187,7 @@ ul.list>li.list-item {
 .item-body {
   height: auto;
   max-height: 0;
+  margin: 0 8px 0 8px;
   overflow: hidden;
   background-color: #F5F6F7;
   transition: 0.5s ease-in-out;
