--- a/css/style.css
+++ b/css/style.css
@@ -112,14 +112,13 @@ ul.nav>li.nav-item:first-of-type {
 ul.nav>li.nav-item>a {
   display: block;
   width: 100%;
-  padding: 8px 0;
+  padding: 12px 0;
   text-decoration: none;
   font-weight: bold;
   color: #3d4449;
   background: #fff;
-  box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075)!important;
+  box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075);
   border-radius: 8px;
-  /* border: 1px solid grey; */
   transition: 0.3s ease-in-out;
 }
 
@@ -131,6 +130,7 @@ ul.nav>li.nav-item>a.active {
   color: #fff;
   background-color: #FAD961;
   background-image: linear-gradient(90deg, #FAD961 0%, #F76B1C 100%);
+  box-shadow: none;
 }
 
 ul.nav, ul.list {
@@ -146,8 +146,6 @@ ul.list {
 ul.list>li.list-item {
   display: block;
   margin: 0 -8px 0 -8px;
-  /* border-left: solid 1px rgba(210, 215, 217, 0.75);
-  border-right: solid 1px rgba(210, 215, 217, 0.75); */
   border-radius: 8px;
 }
 
